Migrate Product Design to Product in team member files

--- a/data/team_members/person/a/alexisginsberg.yml
+++ b/data/team_members/person/a/alexisginsberg.yml
@@ -9,9 +9,9 @@ picture: alexisginsberg.png
 twitter: uhlexsis
 gitlab: uhlexsis
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 story: 'Alexis thinks people are fascinating - evidenced by her background in Advertising
