--- a/data/team_members/person/a/amelia-b.yml
+++ b/data/team_members/person/a/amelia-b.yml
@@ -9,10 +9,9 @@ picture: ameliabauerly.jpg
 twitter:
 gitlab: ameliabauerly
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Configure and Monitor UX Team
-- Monitor:Respond
+- Product Design
 projects:
   design.gitlab.com: maintainer UX
   gitlab: reviewer UX
