--- a/data/team_members/person/a/andlovu.yml
+++ b/data/team_members/person/a/andlovu.yml
@@ -11,9 +11,9 @@ twitter: alindlvu
 linkedin: alindlovu
 gitlab: andlovu
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Configure UX Team
+- Product Design
 specialty:
 - Configure:Configure
 projects:
