--- a/data/team_members/person/a/annabel.yml
+++ b/data/team_members/person/a/annabel.yml
@@ -9,10 +9,9 @@ picture: annabel.png
 twitter: annabeldunstone
 gitlab: annabeldunstone
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
-- Create:Code Review
+- Product Design
 projects:
   design.gitlab.com: reviewer UX
   gitlab: reviewer UX
