--- a/data/team_members/person/a/austinregnery.yml
+++ b/data/team_members/person/a/austinregnery.yml
@@ -9,10 +9,9 @@ picture: austinregnery.jpg
 twitter: reglyson
 gitlab: aregnery
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
-- Manage:Foundations Team
+- Product Design
 projects:
   gitlab: reviewer UX
   design.gitlab.com: trainee_maintainer UX
