--- a/data/team_members/person/b/beckalippert.yml
+++ b/data/team_members/person/b/beckalippert.yml
@@ -10,9 +10,9 @@ twitter:
 gitlab: beckalippert
 pronouns: she/her
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Secure UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
   gitlab-ui: reviewer UX
