--- a/data/team_members/person/c/camellia.yml
+++ b/data/team_members/person/c/camellia.yml
@@ -9,9 +9,9 @@ picture: camelliaxueyiyang.png
 twitter:
 gitlab: cam.x
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Secure UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 story: 'Camellia is a design generalist: She is curious about human behaviours and
