--- a/data/team_members/person/c/chrismicek.yml
+++ b/data/team_members/person/c/chrismicek.yml
@@ -10,7 +10,9 @@ twitter: https://twitter.com/cmicek
 linkedin: https://www.linkedin.com/in/micek/
 gitlab: chrismicek
 departments:
-  - UX
-specialty: "Manage"
+- Product Team
+- UX Department
+- Product Design
+specialty: Manage
 expertise:
 story: "Chris is a UX design leader with 15 years experience building products, defining strategy, and crafting vision. Outside of work he loves travelling, going to the theater, and spending time with his family."
