--- a/data/team_members/person/d/danielmora.yml
+++ b/data/team_members/person/d/danielmora.yml
@@ -9,9 +9,9 @@ picture: dmora-headshot.jpg
 twitter: dmora_berlin
 gitlab: dmoraBerlin
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 story: 'Daniel came to GitLab from working on AI projects in enterprise systems. He
