--- a/data/team_members/person/d/danmh.yml
+++ b/data/team_members/person/d/danmh.yml
@@ -11,8 +11,9 @@ twitter: danmizziharris
 linkedin: danmh
 gitlab: danmh
 departments:
-- Engineering Function
+- Product Team
 - UX Department
+- Product Design
 projects:
   gitlab: reviewer UX
   gitlab-design: maintainer
