--- a/data/team_members/person/e/emilybauman.yml
+++ b/data/team_members/person/e/emilybauman.yml
@@ -11,11 +11,10 @@ twitter:
 linkedin: baumanemily
 gitlab: emilybauman
 departments:
-- Engineering Function
+- Product Team
 - UX Department
 - Ops Section
-- CI/CD UX Team
-- Release Group
+- Product Design
 projects:
   gitlab: reviewer UX
 expertise:
