--- a/data/team_members/person/e/emilysybrant.yml
+++ b/data/team_members/person/e/emilysybrant.yml
@@ -9,11 +9,9 @@ twitter:
 gitlab: esybrant
 pronouns: she/her
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Fulfillment Section
-- Fulfillment UX Team
-- Fulfillment:Purchase Team
+- Product Design
 projects:
   customers-app: reviewer UX
   gitlab: reviewer UX
