--- a/data/team_members/person/j/jeremy-e.yml
+++ b/data/team_members/person/j/jeremy-e.yml
@@ -9,10 +9,9 @@ picture: jelder.jpg
 twitter: jeremyelder
 gitlab: jeldergl
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
-- Manage:Foundations Team
+- Product Design
 projects:
   design.gitlab.com:
   - maintainer Figma
