--- a/data/team_members/person/j/justinmandell.yml
+++ b/data/team_members/person/j/justinmandell.yml
@@ -9,15 +9,16 @@ picture: justinmandell.png
 twitter:
 gitlab: jmandell
 departments:
+- Product Team
 - UX Department
+- Product Design
 specialty: Secure, Protect, Configure, Monitor
-story: 'Justin is a user experience, interaction, visual design leader with a passion
+story: |
+  Justin is a user experience, interaction, visual design leader with a passion
   for product creation and user-centered design. He''s worked on products with screens
   no bigger than a typical thumbnail image all the way up to a flat screen TV and
   everything in between. He believes in the power of team collaboration and the design
   process that helps create cool, interesting, useful things. He has a wife, a step-son,
   2 cats and a dog. He''s a bit of a Star Wars fan, loves movies, reading, video games
   and looks forward to the day he can set up a muaythai heavy bag in his garage again.
-
-  '
 
