--- a/data/team_members/person/k/kcomoli.yml
+++ b/data/team_members/person/k/kcomoli.yml
@@ -10,11 +10,9 @@ twitter:
 gitlab: kcomoli
 pronouns: he/him
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Growth Section
-- Acquisition Team
-- Growth UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
   gitlab-ui: reviewer UX
