--- a/data/team_members/person/l/liborvanc.yml
+++ b/data/team_members/person/l/liborvanc.yml
@@ -9,10 +9,9 @@ twitter: liborvanc
 gitlab: lvanc
 pronouns: he/him
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
-- Manage:Integrations
+- Product Design
 projects:
   design.gitlab.com: maintainer Figma
   gitlab: reviewer UX
