--- a/data/team_members/person/m/matej-l.yml
+++ b/data/team_members/person/m/matej-l.yml
@@ -8,11 +8,9 @@ picture: matejlatin.png
 twitter: matejlatin
 gitlab: matejlatin
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Growth Section
-- Activation Team
-- Growth UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
   gitlab-ui: reviewer UX
