--- a/data/team_members/person/m/mfangman.yml
+++ b/data/team_members/person/m/mfangman.yml
@@ -12,9 +12,9 @@ twitter:
 linkedin: michael-fangman-bb898874
 gitlab: mfangman
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Secure UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 specialty:
