--- a/data/team_members/person/m/michaelle.yml
+++ b/data/team_members/person/m/michaelle.yml
@@ -9,9 +9,9 @@ picture: michaelle.jpg
 twitter: lifeofmle
 gitlab: mle
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 story: |
