--- a/data/team_members/person/m/mikenichols.yml
+++ b/data/team_members/person/m/mikenichols.yml
@@ -8,21 +8,20 @@ reports_to: mvanremmerden
 gitlab: mnichols1
 picture: mikenichols.jpg
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 expertise: '<li>Visual Design <a href="/company/team/structure/#expert">expert</a></li>
 
   '
-story: 'Mike loves the challenge of taking something complex, breaking it down into
+story: 
+  Mike loves the challenge of taking something complex, breaking it down into
   digestible parts, understanding the variables in play, and working through the solution.  He
   believes the more time you spend examining the problem, the better chance you have
   of solving it.  When not building better experiences, Mike spends most of his time
   with his 2 daughters, and playing golf.
-
-  '
 specialty:
 - 'Manage: Workspace'
 
