--- a/data/team_members/person/m/mnearents.yml
+++ b/data/team_members/person/m/mnearents.yml
@@ -8,11 +8,9 @@ picture: matthew-nearents.jpeg
 twitter:
 gitlab: mnearents
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Fulfillment Section
-- Fulfillment UX Team
-- Fulfillment:Utilization Team
+- Product Design
 projects:
   customers-app: reviewer UX
   gitlab: reviewer UX
