--- a/data/team_members/person/m/mvanremmerden.yml
+++ b/data/team_members/person/m/mvanremmerden.yml
@@ -12,7 +12,9 @@ specialty:
 - Create
 - Enablement
 departments:
+- Product Team
 - UX Department
+- Product Design
 story: |
   Combining research, design, prototyping and coding, Marcel is a UX Designer
   who is all about building great products. Having already worked for startups,
