--- a/data/team_members/person/n/nickbrandt.yml
+++ b/data/team_members/person/n/nickbrandt.yml
@@ -10,9 +10,9 @@ twitter:
 gitlab: nickbrandt
 pronouns: he/him
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Enablement UX
+- Product Design
 projects:
   gitlab: reviewer UX
 story: 'Nick has a passion for designing products that solve real problems for everyday
