--- a/data/team_members/person/n/nickleonard.yml
+++ b/data/team_members/person/n/nickleonard.yml
@@ -12,8 +12,9 @@ twitter:
 linkedin: nick-leonard-ux
 gitlab: nickleonard
 departments:
-- Engineering Function
+- Product Team
 - UX Department
+- Product Design
 projects:
   gitlab: reviewer UX
   gitlab-design: maintainer
