--- a/data/team_members/person/p/pedro-m.yml
+++ b/data/team_members/person/p/pedro-m.yml
@@ -10,10 +10,9 @@ twitter: pedromscom
 gitlab: pedroms
 pronouns: he/him
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Dev UX Team
-- Create:Code Review
+- Product Design
 projects:
   design.gitlab.com: maintainer UX
   gitlab: reviewer UX
