--- a/data/team_members/person/p/philipjoyce.yml
+++ b/data/team_members/person/p/philipjoyce.yml
@@ -10,11 +10,9 @@ twitter:
 linkedin:
 gitlab: philipjoyce
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Fulfillment Section
-- Fulfillment UX Team
-- Fulfillment:Provision Team
+- Product Design
 projects:
   customers-app: reviewer UX
   gitlab: reviewer UX
