--- a/data/team_members/person/r/rayana.yml
+++ b/data/team_members/person/r/rayana.yml
@@ -9,7 +9,9 @@ picture: rayanaverissimo.png
 twitter: hellorayana
 gitlab: rayana
 departments:
+- Product Team
 - UX Department
+- Product Design
 specialty: Verify, Package, Release
 projects:
   gitlab-design: maintainer
