--- a/data/team_members/person/s/seggenberger.yml
+++ b/data/team_members/person/s/seggenberger.yml
@@ -10,8 +10,9 @@ twitter: saschaeggi
 linkedin: saschaeggenberger
 gitlab: seggenberger
 departments:
+  - Product Team
   - UX Department
-  - Engineering Function
+  - Product Design
 expertise:
 story: Sascha has created several award-winning user-centric experiences.
   He loves to code and contribute to Open Source, where he is a lead designer for the Drupal Admin UI.
