--- a/data/team_members/person/s/sunjungpark.yml
+++ b/data/team_members/person/s/sunjungpark.yml
@@ -10,9 +10,9 @@ twitter: sunjung_ux
 gitlab: sunjungp
 pronouns: she/her
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-- Enablement UX Team
+- Product Design
 projects:
   gitlab: reviewer UX
 story: 'Sunjung is a Product Designer who is passionate about finding and solving
