--- a/data/team_members/person/v/valerie.yml
+++ b/data/team_members/person/v/valerie.yml
@@ -9,11 +9,10 @@ picture: valerie.jpg
 gitlab: vkarnes
 pronouns: she/her
 departments:
-- Engineering Function
+- Product Team
 - UX Department
-story: 'Valerie is a design leader invested in the professional development of others
+- Product Design
+story: Valerie is a design leader invested in the professional development of others
   and delivers customer-centric solutions for complex areas in enterprise software.
   Outside of work, she likes hiking in the beautiful local parks, appreciating the
   art of letterpress, and obsessing over her favorite college basketball team.
-
-'
