--- a/data/team_members/person/j/jackibauer.yml
+++ b/data/team_members/person/j/jackibauer.yml
@@ -8,11 +8,14 @@ reports_to: valerie
 picture: jackibauer.jpg
 gitlab: jackib
 departments:
+- Product Team
 - UX Department
-story: 'Jacki is a UX leader who has previously worked at Visa and Rackspace. She
+- Product Design
+story: |
+  Jacki is a UX leader who has previously worked at Visa and Rackspace. She
   is constantly looking for ways to make good things better. She has a dog named Mia
   and and likes growing vegetables, reading, traveling, and Marie Kondo-ing just about
-  anything.'
+  anything.
 specialty:
 - Growth
 - Fulfillment
