Update profile details on team's Handbook page - Naman Gala

--- a/data/team_members/person/n/ngala.yml
+++ b/data/team_members/person/n/ngala.yml
@@ -1,13 +1,13 @@
 name: Naman Jagdish Gala
 locality: 
 country: Remote
-role: <a href="">Senior Backend Engineer</a>
+role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend Engineer</a>
 reports_to: davidoregan
-picture: ../gitlab-logo-extra-whitespace.png
+picture: namanjagdishgala.jpg
 pronouns:
-pronunciation:
+pronunciation: Naman Jag-deesh Gaalaa
 twitter:
-linkedin:
+linkedin: naman-j-gala
 gitlab: ngala
 departments:
   - Development
