Refine GitHub importer release post items for 15.5

--- a/data/release_posts/unreleased/manage-github-importer--migrate-mr-events.yml
+++ b/data/release_posts/unreleased/manage-github-importer--migrate-mr-events.yml
@@ -1,18 +1,19 @@
 ---
 features:
   secondary:
-  - name: "Support for pull request and issue events import from GitHub"
+  - name: "Import pull request and issue events from GitHub"
     available_in: [core, premium, ultimate]
     gitlab_com: true
-    documentation_link: 'https://docs.gitlab.com/ee/user/project/import/github.html#imported-data'
+    documentation_link: 'https://docs.gitlab.com/ee/user/project/import/github.html#select-additional-items-to-import'
     reporter: m_frankiewicz
     stage: manage
     categories:
     - Importers
     epic_url: ['https://gitlab.com/groups/gitlab-org/-/epics/7673', 'https://gitlab.com/groups/gitlab-org/-/epics/7655']
     description: |
-      We continue to improve the GitHub project importer by adding more metadata to the migrated projects. With added [pull request events history](https://gitlab.com/groups/gitlab-org/-/epics/7673), the following pull request events can be imported from GitHub and
-      become part of a merge request's metadata:
+      We continue to improve the GitHub project importer by adding more metadata to the migrated projects. With added
+      [pull request events history](https://gitlab.com/groups/gitlab-org/-/epics/7673), the following pull request events
+      can be imported from GitHub and become part of a merge request's metadata:
 
       - Closed or reopened.
       - Labeled or unlabeled.
@@ -20,8 +21,8 @@ features:
       - Assigned or unassigned.
       - Edited.
 
-      With added [issue events history](https://gitlab.com/groups/gitlab-org/-/epics/7655), the following issue events can be imported from GitHub and
-      become part of an issue's metadata:
+      With added [issue events history](https://gitlab.com/groups/gitlab-org/-/epics/7655), the following issue events
+      can be imported from GitHub and become part of an issue's metadata:
 
       - Closed or reopened.
       - Labeled or unlabeled.
@@ -30,6 +31,10 @@ features:
       - Assigned or unassigned.
       - Renamed.
 
-      Because importing pull request and issue events can take a long time, they aren't imported by default. To import them, go to the GitHub import page,
-      and select **Import issue and pull request events** under **Advanced import settings** when importing using the GitLab UI.
+      Because importing pull request and issue events can take a long time, they aren't imported by default. To import them,
+      go to the GitHub import page, and select **Import issue and pull request events** under **Advanced import settings**
+      when importing using the GitLab UI.
+
+      For information on a related feature, see
+      [Import more relationships when importing projects from GitHub](#import-more-relationships-when-importing-projects-from-github).
 
