--- a/data/release_posts/unreleased/manage-github-importer--scrape-images-to-gitlab-and-update-markdow.yml
+++ b/data/release_posts/unreleased/manage-github-importer--scrape-images-to-gitlab-and-update-markdow.yml
@@ -11,8 +11,12 @@ features:
     - Importers
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/18052'
     description: |
-      You can now import GitHub project image resources and other attachment types from release notes and comments. The attachments are
-      added to GitLab and their links are updated to new GitLab URLs.
+      You can now import GitHub project image resources and other attachment types from release notes and comments.
+      The attachments are added to GitLab and their links are updated to new GitLab URLs.
 
-      Attachments aren't imported by default because it can be a time intensive operation. To import them, go to the GitHub import page,
-      and select **Import Markdown attachments** under **Advanced import settings** when importing using the GitLab UI.
+      Attachments aren't imported by default because it can be a time intensive operation. To import them, go to the
+      GitHub import page, and select **Import Markdown attachments** under **Advanced import settings** when importing using
+      the GitLab UI.
+
+      For information on a related feature, see
+      [Import more relationships when importing projects from GitHub](#import-more-relationships-when-importing-projects-from-github).
