Update to team profile correcting title and manager

--- a/data/team_members/person/l/leefalc.yml
+++ b/data/team_members/person/l/leefalc.yml
@@ -1,8 +1,8 @@
 name: Lisa Falcone
 locality:
 country: Remote
-role: <a href="/job-families/legal-and-corporate-affairs/paralegal/#paralegal-privacy--product">Paralegal (Privacy & Product)</a>
-reports_to: lynseysayers
+role: <a href="/job-families/legal-and-corporate-affairs/paralegal/#senior-paralegal/">Senior Paralegal, Product and IP</a>
+reports_to: danrhodes
 picture: ../gitlab-logo-extra-whitespace.png
 pronouns:
 pronunciation:
