Top features and feature improvement

--- a/data/release_posts/15_5/incubation-deploy-apps-to-google-cloud-cloud-seed.yml
+++ b/data/release_posts/15_5/incubation-deploy-apps-to-google-cloud-cloud-seed.yml
@@ -1,6 +1,6 @@
 ---
 features:
-  primary:
+  top:
   - name: "Deploy apps to Google Cloud with GitLab Cloud Seed"
     available_in: [core, premium, ultimate]  # Include all supported tiers
     gitlab_com: true
