--- a/data/release_posts/15_5/manage-add-commit-email-user-attribute-to-the-api-model-for-users-.yml
+++ b/data/release_posts/15_5/manage-add-commit-email-user-attribute-to-the-api-model-for-users-.yml
@@ -12,7 +12,7 @@ features:
     - User Profile
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/375148'
     description: |
-      Previously, a user's commit e-mail could be modified only in the UI. Now, administrators can use the Users API to modify the commit e-mail and perform this as a bulk action.
+      Previously, a user's commit email could be modified only in the UI. Now, administrators can use the Users API to modify the commit email and perform this as a bulk action.
 
       Thank you [Neil Drumm](https://gitlab.com/drumm) for your contribution!
       
