Fix quote and backtick use

--- a/data/release_posts/15_5/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
+++ b/data/release_posts/15_5/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "Update group members' SAML and SCIM extern_uid with API"
+  - name: "Update group members' SAML and SCIM `extern_uid` with API"
     available_in: [silver, gold]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/api/saml.html'
