--- a/data/release_posts/15_5/create-enforce-developer-certificates-of-origin-on-all-contributio.yml
+++ b/data/release_posts/15_5/create-enforce-developer-certificates-of-origin-on-all-contributio.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "Enforce 'Developer Certificate of Origin' on all contributions"
+  - name: "Enforce Developer Certificate of Origin on all contributions"
     available_in: [premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/user/project/repository/push_rules.html#reject-commits-that-arent-dco-certified'
