Update maintainer mentor entry for tigerwnz

--- a/data/maintainer_mentorship.yml
+++ b/data/maintainer_mentorship.yml
@@ -3,9 +3,7 @@
   domains:
     - database
   max_trainees: 2
-  trainees:
-    - Michał Zając (@Quintasan)
-    - Matthew Kasa (@mattkasa)
+  trainees: []
 - mentor: Paul Slaughter
   gitlab: pslaughter
   domains:
