--- a/data/team_members/person/m/markbradatsch.yml
+++ b/data/team_members/person/m/markbradatsch.yml
@@ -1,17 +1,17 @@
 name: Mark Bradatsch
 locality: 
 country: Remote
-role: <a href="">Business Development Representative</a>
+role: <a href="/job-families/marketing/sales-development-representative/#senior-business-development-representative">Senior Business Development Representative</a>
 reports_to: tatianafernandez
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: mbradatsch.jpg
+pronouns: he/his
 pronunciation:
 twitter:
 linkedin:
 gitlab: markbradatsch
 departments:
   - Sales Development
-specialty: ""
+specialty: EMEA
 expertise:
 story:
 
