Update/Add Louise Choi to GitLab team page

--- a/data/team_members/person/l/louisejwc.yml
+++ b/data/team_members/person/l/louisejwc.yml
@@ -1,17 +1,18 @@
 name: Louise Choi
 locality: 
 country: Remote
-role: <a href="">Field Marketing Coordinator</a>
+role: <a href="/job-families/marketing/field-marketing-specialist/">Field Marketing Coordinator</a>
 reports_to: dir-fld-mktg
-picture: ../gitlab-logo-extra-whitespace.png
+picture: louisechoi.png
 pronouns:
 pronunciation:
 twitter:
-linkedin:
+linkedin: louise-jw-choi
 gitlab: louisejwc
 departments:
   - Field Marketing
 specialty: "APAC"
 expertise:
-story:
+story: >
+  Fond of Sailor Moon, confused dogs and most (not licorice) snacks.
 
