--- a/data/maintainer_mentorship.yml
+++ b/data/maintainer_mentorship.yml
@@ -83,6 +83,7 @@
   max_trainees: 3
   trainees:
     - Juliet Wanjohi (@jwanjohi)
+    - Carla Drago (@carlad-gl)
 - mentor: Dmitry Gruzd
   gitlab: dgruzd
   domains:
