Update Jordan Monyhan team page

--- a/data/team_members/person/j/jmonyhan.yml
+++ b/data/team_members/person/j/jmonyhan.yml
@@ -3,7 +3,7 @@ locality:
 country: Remote
 role: <a href="">Public Sector Customer Success Manager</a>
 reports_to: steventerhar
-picture: ../gitlab-logo-extra-whitespace.png
+picture: jordanmonyhan.jpg
 pronouns:
 pronunciation:
 twitter:
