--- a/data/team_members/person/k/kchen6.yml
+++ b/data/team_members/person/k/kchen6.yml
@@ -3,7 +3,7 @@ name: Kelly Chen
 locality:
 country: Remote
 role: <a href="">Manager, Analytics & Insights</a>
-reports_to: craig-mestel
+reports_to: rparker
 picture: kchen6.png
 pronouns: She/Her
 pronunciation:
@@ -11,7 +11,7 @@ twitter:
 linkedin: kellyychen
 gitlab: kchen6
 departments:
-- Finance
+- Business Technology
 specialty:
 expertise:
 story:
