--- a/data/team_members/person/v/vagrawalg.yml
+++ b/data/team_members/person/v/vagrawalg.yml
@@ -3,7 +3,7 @@ name: Vikas Agrawal
 locality:
 country: Remote
 role: <a href="">Senior Manager, Analytics & Insights</a>
-reports_to: craig-mestel
+reports_to: rparker
 picture: vikasagrawal.png
 pronouns:
 pronunciation:
@@ -11,7 +11,7 @@ twitter:
 linkedin: vikas-agrawal-804b6b5
 gitlab: vagrawalg
 departments:
-- Finance
+  - Business Technology
 specialty: ''
 expertise:
 story:
