Update team pets to add two pretty pug girls

--- a/data/pets.yml
+++ b/data/pets.yml
@@ -9,6 +9,25 @@
     You''ve been warned. Don''t mess with Turk Turk or his avocados on E st.
 
     '
+- name: Lady Pug
+  picture: ladypug.png
+  human: Davis Bickford
+  story: 'Lady Pug is a sweet girl who loves treats, naps and cuddles. She''s a world-class
+    sprinter, and was 
+    <a href="https://www.reddit.com/r/aww/comments/3pjmox/pugs_first_time_at_the_dog_park/">
+    famous for a day</a> because she''s such a fast pug. She will sit on your lap, you
+    really don''t have a choice in this.
+
+    '
+- name: Idgie
+  picture: idgiepug.png
+  human: Davis Bickford
+  story: 'Idgie is a pug / american bulldog mix who loves playing with toys, eating leaves, 
+    and cuddling on laps. She''s especially skillful at spinning in circles, annoying her 
+    sister pug, Lady, and scaring away squirrels who didn''t do anything remotely deserving 
+    of her sassy ''tude. 
+
+    '
 - name: Vega
   picture: vega.png
   human: Brian Tabbert
