--- a/data/team_members/person/j/joe-shaw.yml
+++ b/data/team_members/person/j/joe-shaw.yml
@@ -8,6 +8,8 @@ reports_to: nklick
 picture: joeshaw.jpeg
 pronouns: he/his
 pronunciation:
+projects:
+  gitlab-observability: maintainer
 twitter:
 linkedin:
 gitlab: joe-shaw
