--- a/data/team_members/person/m/murray362.yml
+++ b/data/team_members/person/m/murray362.yml
@@ -1,20 +1,19 @@
----
-name: Daniele Rossetti
-locality:
+name: Ian Murray
+locality: 
 country: Remote
 role: <a href="">Senior Frontend Engineer</a>
 reports_to: nklick
-picture: "../gitlab-logo-extra-whitespace.png"
+picture: ../gitlab-logo-extra-whitespace.png
 pronouns:
 pronunciation:
 projects:
   gitlab-observability-ui: maintainer
 twitter:
 linkedin:
-gitlab: drosse
+gitlab: murray362
 departments:
-- Development
-specialty: Monitor:Observability
+  - Development
+specialty: "Monitor:Observability"
 expertise:
 story:
 
