--- a/data/team_members/person/a/arun.sori.yml
+++ b/data/team_members/person/a/arun.sori.yml
@@ -7,6 +7,8 @@ reports_to: nklick
 picture: arunsori.jpg
 pronouns: he/him
 pronunciation:
+projects:
+  gitlab-observability: maintainer
 twitter: arunsori
 gitlab: arun.sori
 linkedin: arun-sori-98031b77
