Update TW assignment for runner group

--- a/data/stages.yml
+++ b/data/stages.yml
@@ -741,7 +741,7 @@ stages:
           - Erika Feldman
         ux:
           - Gina Doyle
-        tech_writer: Suzanne Selhorn
+        tech_writer: Fiona Neill
         appsec_engineer: Dominic Couture
         cs_team_tag: Runner Group CS Stable Counterpart
         infra_reliability_team_tag: Runner Group Reliability Stable Counterpart
