Update info on the team page

--- a/data/team_members/person/m/mgass1.yml
+++ b/data/team_members/person/m/mgass1.yml
@@ -3,15 +3,14 @@ locality:
 country: Remote
 role: <a href="">Senior Product Manager</a>
 reports_to: ofernandez2
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
-pronunciation:
-twitter:
-linkedin:
+picture: manuelgass.png
+pronouns: he/him
+pronunciation: MAA-nuuel
+linkedin: manuel-gass
 gitlab: mgass1
 departments:
   - Product Management
+  - Fulfillment Section
+  - Fulfillment PM Team
 specialty: "Fulfillment"
-expertise:
-story:
 
